--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= 11, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: rgb(18, 18, 77);
+            color: aliceblue;
+        }
+    
+        h1 {
+            background-color: rgb(14, 105, 2);
+            font-style: italic;
+            font-family: sans-serif;
+        }
+        h2 {
+            font-style: italic;
+            font-family: sans-serif;
+        }
+        p {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+        li{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>TechSolutions</h1>
+        <p>Inovação tecnológica para pequenas e medias empresas</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>Sobre Nós</h2>
+            <p>A TechSolutions é uma startup focada em criar soluções tecnológicas de alto impacto para pequenas e médias empresas, ajudando-as crescer de forma sustentável no mercado digital</p>
+        </section>
+
+        <section>
+            <h2>Serviços Oferecidos</h2>
+            <ul>
+                <li>Desenvolvimento de Web Sites</li>
+                <li>Consultoria em Ti</li>
+                <li>Soluções personalizadas de Software</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Nossa Equipe</h2>
+            <ul>
+                <li>André Silva Carvalho - Engenheiro de Software</li>
+                <li>Grazielly Santana Cruz - UX/DESIGNER</li>
+            </ul>
+        </section>
+    </main>
+
 </body>
 </html>
