--- a/index.html
+++ b/index.html
@@ -7,34 +7,40 @@
     <title>Document</title>
     <style>
         body {
-            background-color: rgb(18, 18, 77);
-            color: aliceblue;
+            background-color: rgb(255, 255, 255);
+            color: #004d99;
+            font-family: Arial, sans-serif;
         }
     
         h1 {
-            background-color: rgb(14, 105, 2);
-            font-style: italic;
-            font-family: sans-serif;
+            margin: 0;
+            text-align: center;
+            color: #ffffff;
         }
-        h2 {
-            font-style: italic;
-            font-family: sans-serif;
+        header{
+            background-color: #004d99;
         }
         p {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: black;
         }
         li{
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            list-style: square inside;
+            color: black;
+        }
+        footer{
+            background-color: #004d99;
+            color: white;
+            text-align: center;
+            padding: 1rem;
         }
     </style>
 </head>
 <body>
     <header>
+        <h1> </h1>
         <h1>TechSolutions</h1>
-        <p>Inovação tecnológica para pequenas e medias empresas</p>
     </header>
 
-    <main>
         <section>
             <h2>Sobre Nós</h2>
             <p>A TechSolutions é uma startup focada em criar soluções tecnológicas de alto impacto para pequenas e médias empresas, ajudando-as crescer de forma sustentável no mercado digital</p>
@@ -48,14 +54,34 @@
                 <li>Soluções personalizadas de Software</li>
             </ul>
         </section>
+
         <section>
             <h2>Nossa Equipe</h2>
             <ul>
-                <li>André Silva Carvalho - Engenheiro de Software</li>
-                <li>Grazielly Santana Cruz - UX/DESIGNER</li>
+                <li style="background-color: rgb(224, 255, 255);">André Silva Carvalho - Engenheiro de Software</li>
+                <br>
+                <li style="background-color: rgb(224, 255, 255);">Grazielly Santana Cruz - UX/DESIGNER</li>
             </ul>
         </section>
-    </main>
 
+        <section>
+            <h2>Contatos</h2>
+                <p>Email: contato@techsolutions.com</p>
+                <p>Telefone: (71) 1234-5678</p>
+        </section>
+        
+        <section>
+            <h2>Conecte-se Conosco</h2>
+            <p><a href="https://www.linkedin.com/in/andr%C3%A9-silva-carvalho-3a43a4366/">Linkedin</a></p>
+            <p><a href="https://maps.app.goo.gl/Nkvxa5jGaeDMbV4p9">Localização</a></p>
+        </section>
+
+        <section>
+            <img src="./img/globo tec.jpg" alt="Globo terrestre feito de placas de circuito e fios" width="300px" height="200">
+        </section>
+
+        <footer>
+            <p>&copy; 2025 TechSolutions. Todos os direitos reservados.</p>
+        </footer>
 </body>
 </html>
